# ProjectManagementWorkshop

./: .flake8  .gitignore  LICENSE  README.md  conda.yaml  pyproject.toml
.github/workflows/: test.yaml
data/download/iris/: README.md  preprocess.py
data/download/mtcars/: README.md  preprocess.py
docs/: api.rst  conf.py  index.rst
docs/_templates/: README.md
evaluation/config/: config.yaml
evaluation/workflow/: Snakefile
evaluation/workflow/scripts/: compute_metrics.py  plot.R  random_pred.py  split_train_test.py  summarize.py
experiments/visualize_data/: visualize_data.py
mypackage/: __init__.py  main.py  model.py
tests/: fixtures.py  test_main.py  test_model.py
